# mysitebot

./: .gitignore  .gitlab-ci.yml  LICENSE  NOTICE  README.md  cli.py  package-lock.json  package.json  pyproject.toml
.githooked/: config.yml
.githooked/hooks/: pre-commit.yml  pre-push.yml
.github/workflows/: ci.yml
src/agent/: __init__.py  config.py  content_safety.py  content_validator.py  mdx_scan.py  media_integrity.py  media_search.py  prompts.py  site_editor.py  templates.py  toolbox.py
src/agent/llm/: __init__.py  client.py  testing.py  tools.py  types.py
templates/: SECTIONS.md  generate_sections_doc.py  generate_templates_registry.py  sections-schema.json  templates_registry.json
templates/astro-basic/: .gitignore  .gitlab-ci.yml  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
templates/astro-basic/content/: settings.yaml
tests/: conftest.py  test_capped_turn_honesty.py  test_cli.py  test_config.py  test_content_safety.py  test_content_validator.py  test_import_seam.py  test_llm_client.py  test_llm_tools.py  test_llm_types.py  test_local_git_safety.py  test_media_integrity.py  test_media_integrity_wiring.py  test_media_search_format.py  test_prompts.py  test_public_surface.py  test_section_index_freshness.py  test_sections_schema.py  test_site_editor_claims.py  test_site_editor_delete.py  test_site_editor_draft_persistence.py  test_site_editor_publish_gating.py  test_site_editor_retry.py  test_site_editor_scrub.py  test_site_editor_sections.py  test_site_editor_selfheal.py  test_site_editor_settings.py  test_smoke.py  test_template_component_map.py  test_templates_resolver.py  test_toolbox_gating.py  test_wagmi_media_search.py
tests/security/: README.md  test_mdx_expression_injection.py
training/: README.md  claude_driver.py
training/sam/: .gitignore  README.md  _paths.py  calibrate_judge.py  claude_cli.py  fixer.py  generate_scenarios.py  judge.py  procs.py  registry.json  run_loop.py  sam_registry.py  sam_runner.py  scenario_schema.py  stub_media_search.py  verifier.py
training/sam/calibration/: 2026-07-03-sonnet-5.json
training/sam/directives/: fixer.md  generator.md  judge.md
training/sam/tests/: conftest.py  test_calibrate_judge.py  test_claude_cli.py  test_fixer.py  test_generator.py  test_judge.py  test_procs.py  test_run_loop.py  test_sam_registry.py  test_sam_runner.py  test_scenario_schema.py  test_seed_scenarios.py  test_standalone_layout.py  (+2 more)
(+51 files in other folders)
